# DumbCCSkills

./: .gitignore  CLAUDE.md  LICENSE  README.md  install.sh  lark-approval  lark-attendance  lark-base  lark-calendar  lark-contact  lark-doc  lark-drive  lark-event  lark-im  lark-mail  lark-minutes  lark-okr  lark-openapi-explorer  lark-shared  lark-sheets  lark-skill-maker  lark-slides  lark-task  lark-vc  lark-whiteboard  lark-wiki  lark-workflow-meeting-summary  lark-workflow-standup-report
.claude/: settings.json
deep-research/: SKILL.md
deep-research/evals/: evals.json
frontend-preview/: SKILL.md
frontend-preview/evals/: evals.json
product-brainstorming/: SKILL.md
product-brainstorming/assets/: brainstorm-report.html
product-brainstorming/evals/: evals.json
python-scaffold/: SKILL.md
python-scaffold/evals/: evals.json
python-scaffold/templates/cli/: README.md  pyproject.toml
python-scaffold/templates/cli/src/project_name/: __main__.py  cli.py
python-scaffold/templates/cli/tests/: test_cli.py
python-scaffold/templates/lib/: .gitignore  README.md  pyproject.toml
python-scaffold/templates/lib/src/project_name/: __init__.py
python-scaffold/templates/lib/tests/: test_core.py
python-scaffold/templates/web/: README.md  pyproject.toml
python-scaffold/templates/web/tests/: conftest.py
safe-config/: SKILL.md
safe-config/evals/: evals.json
search-fix/: SKILL.md
search-fix/evals/: evals.json
session-export/: SKILL.md
session-export/evals/: evals.json
session-export/scripts/: export_session.py
(+3 files in other folders)
