[project]
name = "{{project_name}}"
description = "{{description}}"
requires-python = ">=3.14"
dynamic = ["version"]

[project.scripts]
{{project_name}} = "{{project_name_snake}}.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/{{project_name_snake}}/__init__.py"

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "mypy>=1.15.0",
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

[dependencies]
click = ">=8.0"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "C4"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov --cov-report=term-missing"
